--- a/docs/_posts/2025-05-24-May-24-2025-Game-14-The West.markdown
+++ b/docs/_posts/2025-05-24-May-24-2025-Game-14-The West.markdown
@@ -7,7 +7,7 @@ categories:
     - "West"
 published: true
 ---
-Another hard-fought game in the West! We played the Expert AST to round 18 with one more round to go as the winner stalled once. With 8 players the calamities were fast and furious with everyone getting knocked down in some fashion every round. With that being said, almost everyone managed to stay within a few points of each other except for Egypt which got hit hard and then lagged in getting sufficient trade goods to get them into the early bronze age until late in the game.
+Another hard-fought game in the West! We played the Expert AST to round 18 with one more round to go as the winner stalled twice. With 8 players the calamities were fast and furious with everyone getting knocked down in some fashion every round. With that being said, almost everyone managed to stay within a few points of each other except for Egypt which got hit hard and then lagged in getting sufficient trade goods to get them into the early bronze age until late in the game.
 
 The end was a close race between Hellas, Rome and Assyria, with Rome and Assyria not advancing only due to having insufficient cities in the final round.
 
